--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <div role="main" class="main shop pt-4">
-	<!-- <div class="container pb-5">
+	<div class="container pb-5">
 		<div class="row">
 			<div class="col">
 				<div class="owl-carousel nav-inside show-nav-hover dots-inside mb-0" data-plugin-options="{'items': 1, 'loop': true, 'autoplay': true, 'autoplayTimeout': 5000, 'autoplayHoverPause': true, 'nav': true, 'dots': true, 'animateOut': 'fadeOut'}">
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 
 	<div class="container">
   
